[gd_scene load_steps=10 format=2]

[ext_resource path="res://Font/BMYEONSUNG_ttf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Tooltip/Tooltip.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI Images/BowBeta.png" type="Texture" id=3]
[ext_resource path="res://ImageResources/Shadows/SmallShadow.png" type="Texture" id=4]
[ext_resource path="res://UI Images/Frame_Common.png" type="Texture" id=5]
[ext_resource path="res://Items/Lootable/Lootable.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14, 12 )

[node name="Lootable" type="RigidBody2D"]
collision_layer = 64
collision_mask = 65
mode = 2
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, 0 )
scale = Vector2( 1.3, 0.35 )
texture = ExtResource( 4 )

[node name="RarityBorder" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 0, -7.425 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="Item" type="Sprite" parent="."]
position = Vector2( 0, -7.425 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="Quantity" type="Label" parent="."]
margin_left = -8.0
margin_top = -6.0
margin_right = 32.0
margin_bottom = 14.0
rect_scale = Vector2( 0.35, 0.35 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -1.0
rect_scale = Vector2( 0.1, 0.1 )

[node name="Background" parent="Tooltip" index="0"]
margin_left = 60.6061
margin_top = -164.502
margin_right = 644.606
margin_bottom = 46.4978

[node name="Line1" parent="Tooltip/Background/VBoxContainer" index="0"]
margin_right = 513.0

[node name="ItemName" parent="Tooltip/Background/VBoxContainer" index="1"]
margin_right = 513.0

[node name="Line2" parent="Tooltip/Background/VBoxContainer" index="3"]
margin_right = 513.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 0.35, 0.35 )
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Lootable_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Lootable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Lootable_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]

[editable path="Tooltip"]
